<resources>
    <string name="app_name">咪哩猫</string>
    <string name="tab_quhuo">取货</string>
    <string name="tab_gouwuche">购物车</string>
    <string name="tab_huodong">活动</string>
    <string name="hint_search">输入货道号快速搜索商品</string>
    <string name="buy_imm">立即购买</string>
    <string name="add_cart">加入购物车</string>
    <string name="goto_pay">去结算</string>
    <string name="use_coupon">使用优惠券</string>
    <string name="title_quhuo">取货</string>
    <string name="title_chuhuo">出货</string>
    <string name="title_tuikuan">退款</string>
    <string name="scaner_code">请打开微信扫描二维码取货</string>
    <string name="pay_success">您已支付成功！</string>
    <string name="chuhuo_msg">正在为您取货，请勿离开，喵~</string>
    <string name="quhuo_msg">取货失败，系统将自动退款！</string>
    <string name="saomaguanzhu">扫码关注“咪哩猫”微信公众号\n更多优惠等你来！</string>
    <string name="click_bug">去 逛 逛</string>
    <string name="kefu_msg">微信关注“咪哩猫”公众号联系客服</string>

    <!--支付订单-->
    <string name="pay_order">支付订单</string>
    <string name="pay_price">支付金额</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usercenter_version_ok">已是最新版本</string>
</resources>
