<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".fragment.ChuhuoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/whiteColor"
            >
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="50dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_height="40dp"
                android:src="@drawable/back"
                android:paddingLeft="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_chuhuo"
                android:gravity="center"
                android:textColor="@color/text_dark"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/tvCountDown"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:text="60s"
                android:gravity="center"
                android:textColor="@color/text_nomorl"
                android:textSize="14sp"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivCode"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="120dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/qr_code"
                />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/10"
                android:textColor="@color/text_dark"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/ivCode"
                android:paddingTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_success"
                android:textColor="@color/text_nomorl"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                android:paddingTop="30dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chuhuo_msg"
                android:textColor="@color/text_dark"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:paddingTop="60dp"
                />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>