<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    tools:context=".activity.MainActivity">

    <com.app.mlm.widget.CoustomTopView
        android:id="@+id/topView"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

    </FrameLayout>

    <LinearLayout
        android:background="@color/whiteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/quhuo"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tab_quhuo_press"
                />

            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/tab_quhuo"
                android:textColor="@color/text_nomorl"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gouwuche"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tab_gouwuche_press"
                />

            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/tab_gouwuche"
                android:textColor="@color/text_nomorl"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/huodong"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tab_huodong_press"
                />

            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/tab_huodong"
                android:textColor="@color/text_nomorl"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>