<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MainFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

    </android.support.v7.widget.RecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mainBackground"/>

    <LinearLayout
        android:background="@color/whiteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/quhuo"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tab_quhuo_press"
                />

            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/tab_quhuo"
                android:textColor="@color/text_nomorl"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/gouwuche"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <LinearLayout
                android:id="@+id/llCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/tab_gouwuche_press"
                    />

                <TextView
                    android:paddingTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/tab_gouwuche"
                    android:textColor="@color/text_nomorl"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tvCartPrice"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textSize="12sp"
                android:text="￥128.8"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/shape_blue_line"
                android:layout_centerHorizontal="true"
                android:layout_alignBottom="@id/llCart"
                />

            <TextView
                android:id="@+id/tvCartCount"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:textSize="12sp"
                android:text="11"
                android:gravity="center"
                android:textColor="@color/whiteColor"
                android:background="@drawable/shape_red_circle"
                android:layout_alignRight="@id/llCart"
                android:layout_alignParentTop="@id/llCart"
                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/huodong"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tab_huodong_press"
                />

            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/tab_huodong"
                android:textColor="@color/text_nomorl"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>